--- a/index.html
+++ b/index.html
@@ -1,140 +1,58 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
+  <!DOCTYPE html>
+    <html lang="id">
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ryyn AI Assistant</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #0d0d0d;
-            color: #e0e0e0;
-        }
-        .chat-container {
-            display: flex;
-            flex-direction: column;
-            height: calc(100vh - 120px);
-            overflow-y: auto;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-            padding: 1rem;
-        }
-        .chat-container::-webkit-scrollbar {
-            display: none;
-        }
-        .message-box {
-            animation: fadeIn 0.5s ease-in-out;
-            max-width: 80%;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        .loading-dots {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-        }
-        .loading-dots span {
-            width: 8px;
-            height: 8px;
-            background-color: #64748b;
-            border-radius: 50%;
-            margin: 0 4px;
-            animation: bounce 1.4s infinite ease-in-out both;
-        }
-        .loading-dots span:nth-child(1) { animation-delay: -0.32s; }
-        .loading-dots span:nth-child(2) { animation-delay: -0.16s; }
-        .loading-dots span:nth-child(3) { animation-delay: 0s; }
-        @keyframes bounce {
-            0%, 80%, 100% { transform: scale(0); }
-            40% { transform: scale(1); }
-        }
-        .logo-img {
-            height: 40px;
-            width: auto;
-        }
-    </style>
+    <title>Chat AI ryyn</title>
+    <link rel="stylesheet" href= "ewe.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-950 text-gray-200">
+<body>
 
-    <div class="flex flex-col h-screen">
-        <header class="bg-gray-900 p-4 flex items-center justify-between shadow-lg z-10">
-            <div class="flex items-center">
-                <img src="https://files.catbox.moe/jhbgaa.jpg" alt="Logo" class="h-10 w-auto mr-3">
-                <div class="flex flex-col">
-                    <span class="text-xl font-bold">ryyn AI Assistant</span>
-                    <span class="text-xs text-green-500 flex items-center">
-                        <span class="relative flex h-2 w-2 mr-1">
-                            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
-                            <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
-                        </span>
-                        Online
-                    </span>
-                </div>
-            </div>
-            <div class="flex items-center">
-                <button id="theme-toggle" class="p-2 rounded-full hover:bg-gray-700 transition-colors duration-200 mr-2">
-                    <svg id="sun-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
-                    </svg>
-                    <svg id="moon-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
-                    </svg>
-                </button>
-                <div class="relative inline-block text-left mr-2">
-                    <div>
-                        <button type="button" class="inline-flex justify-center w-full rounded-md px-4 py-2 bg-gray-800 text-sm font-medium text-gray-300 hover:bg-gray-700 focus:outline-none" id="menu-button" aria-expanded="true" aria-haspopup="true">
-                            <span id="selected-mode-text">Promt Biasa</span>
-                            <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-                            </svg>
-                        </button>
-                    </div>
-                    <div id="mode-dropdown" class="origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-gray-800 ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
-                        <div class="py-1" role="none">
-                            <a href="#" class="text-gray-300 block px-4 py-2 text-sm hover:bg-gray-700" data-mode="normal">Promt Biasa</a>
-                            <a href="#" class="text-gray-300 block px-4 py-2 text-sm hover:bg-gray-700" data-mode="marah">Marah</a>
-                            <a href="#" class="text-gray-300 block px-4 py-2 text-sm hover:bg-gray-700" data-mode="betmut">Betmut</a>
-                            <a href="#" class="text-gray-300 block px-4 py-2 text-sm hover:bg-gray-700" data-mode="asik">Asik</a>
-                            <a href="#" class="text-gray-300 block px-4 py-2 text-sm hover:bg-gray-700" data-mode="pacar">Pacar</a>
-                        </div>
-                    </div>
-                </div>
-                <button id="clear-chat-btn" class="p-2 rounded-full hover:bg-gray-700 transition-colors duration-200">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-                    </svg>
-                </button>
-            </div>
-        </header>
+    <div class="chat-container">
 
-        <main class="flex-1 overflow-auto p-4 chat-container" id="chat-container">
-            <div id="initial-message" class="text-center text-gray-500 mt-4">
-                <img src="https://files.catbox.moe/xq800a.jpeg" alt="Logo" class="mx-auto h-24 mb-4 opacity-50">
-                <p>Halo! Saya ryyn AI. Silakan tanyakan sesuatu pada saya.</p>
-                <p class="text-sm">Anda dapat memilih persona saya di bagian atas.</p>
+        <div class="chat-header">
+            <img src="https://files.catbox.moe/gb1123.png" alt="Noroshi Profile" class="profile-pic">
+            <div class="header-info">
+                <div class="Noroshi-name">ryyn Ai Asisstant</div>
+                <div class="online-indocator"> </div>
+                <div class="status-text">🟢 Online</div>
             </div>
-        </main>
-
-        <div class="p-4 bg-gray-900 border-t border-gray-800 shadow-inner">
-            <div class="flex items-center space-x-2">
-                <input type="text" id="username-input" placeholder="Masukkan Nama Anda..." class="flex-1 p-3 rounded-full bg-gray-800 text-gray-200 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-all duration-200">
-                <div class="relative flex-1 hidden" id="message-input-area">
-                    <textarea id="user-input" class="w-full p-3 pr-12 rounded-full bg-gray-800 text-gray-200 placeholder-gray-500 resize-none focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-all duration-200" rows="1" placeholder="Type Your Message Here..."></textarea>
-                    <button id="send-btn" class="absolute right-3 top-1/2 -translate-y-1/2 p-2 rounded-full bg-indigo-600 text-white hover:bg-indigo-700 transition-colors duration-200">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
-                        </svg>
+            <div class="controls-container">
+                <input type="text" id="userName" placeholder="Nama Anda...">
+                <button id="theme-toggle-btn" title="Ganti Tema"></button>
+                <div class="settings-menu" id="settings-menu">
+                    <button class="settings-menu-button" id="settings-menu-button">
+                        <span id="current-mode-text">Promt (Biasa)</span>
+                        <svg class="dropdown-arrow" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"><path d="M7 10l5 5 5-5H7z"></path></svg>
                     </button>
+                    <div class="settings-menu-dropdown" id="settings-menu-dropdown">
+                        <a href="#" class="dropdown-item" data-mode="Promt Biasa">Promt Biasa</a>
+                        <a href="#" class="dropdown-item" data-mode="Mode Sange">Mode Sange</a>
+                        <a href="#" class="dropdown-item active" data-mode="Mode So Imut">Mode So (Imut)</a>
+                        <a href="#" class="dropdown-item" data-mode="Mode Bucin">Mode (Bucin)</a>
+                        <a href="#" class="dropdown-item" data-mode="Mode Cool">Mode Cool</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#" class="dropdown-item danger" data-mode="clear"> Delete Chat Session</a>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="chat-box" id="chat-box">
+        </div>
+
+        <div class="chat-input-area">
+            <textarea id="userInput" placeholder="Type Your Message Here..." rows="1"></textarea>
+            <button id="sendBtn">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor">
+                    <path d="M3 20v-6l8-2-8-2V4l19 8-19 8z"></path>
+                </svg>
+            </button>
+        </div>
+
     </div>
 
-    <script src="rex.js"></script>
-</body>
-</html>
+    <script src="fex.js"></script>
