--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-  <!DOCTYPE html>
+    <!DOCTYPE html>
     <html lang="id">
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat AI ryyn</title>
-    <link rel="stylesheet" href= "ewe.css">
+    <title>Chat With Noroshi</title>
+    <link rel="stylesheet" href="ewe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
@@ -14,11 +14,11 @@
     <div class="chat-container">
 
         <div class="chat-header">
-            <img src="https://files.catbox.moe/gb1123.png" alt="Noroshi Profile" class="profile-pic">
+            <img src="images/qnGDfrCVEOxh.jpeg" alt="Noroshi Profile" class="profile-pic">
             <div class="header-info">
-                <div class="Noroshi-name">ryyn Ai Asisstant</div>
-                <div class="online-indocator"> </div>
-                <div class="status-text">🟢 Online</div>
+                <div class="Noroshi-name">Noroshi Ai Asisstant (Z)</div>
+                <div class="">online-indicator</div>
+                <div class="status-text">Online</div>
             </div>
             <div class="controls-container">
                 <input type="text" id="userName" placeholder="Nama Anda...">
@@ -30,6 +30,7 @@
                     </button>
                     <div class="settings-menu-dropdown" id="settings-menu-dropdown">
                         <a href="#" class="dropdown-item" data-mode="Promt Biasa">Promt Biasa</a>
+                        <a href="#" class="dropdown-item" data-mode="Mode Promosi">Mode Promosi</a>
                         <a href="#" class="dropdown-item" data-mode="Mode Sange">Mode Sange</a>
                         <a href="#" class="dropdown-item active" data-mode="Mode So Imut">Mode So (Imut)</a>
                         <a href="#" class="dropdown-item" data-mode="Mode Bucin">Mode (Bucin)</a>
@@ -56,3 +57,6 @@
     </div>
 
     <script src="fex.js"></script>
+
+</body>
+</html>
