--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/qnGDfrCVEOxh.jpeg" alt="Noroshi Profile" class="profile-pic">
             <div class="header-info">
                 <div class="Noroshi-name">Noroshi Ai Asisstant (Z)</div>
-                <div class="">online-indicator</div>
+                <div class= >"online-indicator"</div>
                 <div class="status-text">Online</div>
             </div>
             <div class="controls-container">
