--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="images/qnGDfrCVEOxh.jpeg" alt="Noroshi Profile" class="profile-pic">
             <div class="header-info">
                 <div class="Noroshi-name">Noroshi Ai Asisstant (Z)</div>
-                <div class= >"online-indicator"</div>
-                <div class="status-text">Online</div>
+                <div class= "online-indicator"> </div>
+                <div class="status-text">🟢 Online</div>
             </div>
             <div class="controls-container">
                 <input type="text" id="userName" placeholder="Nama Anda...">
@@ -30,7 +30,7 @@
                     </button>
                     <div class="settings-menu-dropdown" id="settings-menu-dropdown">
                         <a href="#" class="dropdown-item" data-mode="Promt Biasa">Promt Biasa</a>
-                        <a href="#" class="dropdown-item" data-mode="Mode Promosi">Mode Promosi</a>
+                        <a href="#" class="dropdown-item" data-mode="Mode marah">Mode marah</a>
                         <a href="#" class="dropdown-item" data-mode="Mode Sange">Mode Sange</a>
                         <a href="#" class="dropdown-item active" data-mode="Mode So Imut">Mode So (Imut)</a>
                         <a href="#" class="dropdown-item" data-mode="Mode Bucin">Mode (Bucin)</a>
