--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat With Noroshi</title>
+    <title>Chat With ryyn</title>
     <link rel="stylesheet" href="ewe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -16,7 +16,7 @@
         <div class="chat-header">
             <img src="images/qnGDfrCVEOxh.jpeg" alt="Noroshi Profile" class="profile-pic">
             <div class="header-info">
-                <div class="Noroshi-name">Noroshi Ai Asisstant (Z)</div>
+                <div class="Noroshi-name">ryyn Ai Asisstant (Z)</div>
                 <div class= "online-indicator"> </div>
                 <div class="status-text">🟢 Online</div>
             </div>
@@ -30,8 +30,6 @@
                     </button>
                     <div class="settings-menu-dropdown" id="settings-menu-dropdown">
                         <a href="#" class="dropdown-item" data-mode="Promt Biasa">Promt Biasa</a>
-                        <a href="#" class="dropdown-item" data-mode="Mode marah">Mode marah</a>
-                        <a href="#" class="dropdown-item" data-mode="Mode Sange">Mode Sange</a>
                         <a href="#" class="dropdown-item active" data-mode="Mode So Imut">Mode So (Imut)</a>
                         <a href="#" class="dropdown-item" data-mode="Mode Bucin">Mode (Bucin)</a>
                         <a href="#" class="dropdown-item" data-mode="Mode Cool">Mode Cool</a>
