--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="chat-container">
 
         <div class="chat-header">
-            <img src="images/qnGDfrCVEOxh.jpeg" alt="Noroshi Profile" class="profile-pic">
+            <img src="https://files.catbox.moe/gb1123.png" alt="ryyn Profile" class="profile-pic">
             <div class="header-info">
                 <div class="Noroshi-name">ryyn Ai Asisstant (Z)</div>
                 <div class= "online-indicator"> </div>
