--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="chat-header">
             <img src="https://files.catbox.moe/gb1123.png" alt="ryyn Profile" class="profile-pic">
             <div class="header-info">
-                <div class="Noroshi-name">ryyn Ai Asisstant (Z)</div>
+                <div class="Noroshi-name">ryyn Ai Asisstant</div>
                 <div class= "online-indicator"> </div>
                 <div class="status-text">🟢 Online</div>
             </div>
@@ -25,7 +25,7 @@
                 <button id="theme-toggle-btn" title="Ganti Tema"></button>
                 <div class="settings-menu" id="settings-menu">
                     <button class="settings-menu-button" id="settings-menu-button">
-                        <span id="current-mode-text">Promt (Biasa)</span>
+                        <span id="current-mode-text">Mode (Bucin)</span>
                         <svg class="dropdown-arrow" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"><path d="M7 10l5 5 5-5H7z"></path></svg>
                     </button>
                     <div class="settings-menu-dropdown" id="settings-menu-dropdown">
